--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,10 +7,9 @@ ensure_vala_version("0.11.3" MINIMUM)
 # Include the precompile modules to set things up.
 include(ValaPrecompile)
 
-find_package(PkgConfig)
-
 # Declaring our dependancies.
-pkg_check_modules(DEPS REQUIRED gtk+-3.0)
+find_package(PkgConfig)
+pkg_check_modules(DEPS REQUIRED gobject-2.0 glib-2.0 gio-2.0 gtk+-3.0 gee-1.0 granite)
 
 set(CFLAGS
     ${DEPS_CFLAGS} ${DEPS_CFLAGS_OTHER}
@@ -21,12 +20,16 @@ set(LIB_PATHS
 link_directories(${LIB_PATHS})
 
 add_definitions(${CFLAGS} "-DGETTEXT_PACKAGE=\"seasonhunter\"")
+
 vala_precompile(VALA_C
     main.vala
     config.vala
     season-hunter.vala
+    settings.vala
 PACKAGES
-    gtk+-3.0)
+    gtk+-3.0
+    gee-1.0
+    granite)
 
 # Define the executable name.
 add_executable(seasonhunter
