--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,9 +23,9 @@ add_definitions(${CFLAGS} "-DGETTEXT_PACKAGE=\"seasonhunter\"")
 
 vala_precompile(VALA_C
     main.vala
-    config.vala
-    season-hunter.vala
-    settings.vala
+    Config.vala
+    SeasonHunter.vala
+    Settings.vala
 PACKAGES
     gtk+-3.0
     gee-1.0
